Add extra data to element

--- a/frontend/view/home.html
+++ b/frontend/view/home.html
@@ -3,4 +3,4 @@
 <ul>
 	<!--<li ng-repeat="n in words" ng-animate="'animate'" color-me>{{ n | toUpperCase }}</li> -->
 </ul>
-<wordcloud words="words"></wordcloud>
+<wordcloud words="words" on-click="wordClick(element)"></wordcloud>
