--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -8,3 +8,21 @@
 {
 	opacity: 1;
 }
+
+.wordcloud-container {
+	border: solid 1px #CCC;
+	height: 500px;
+	width: 700px;
+	border-radius: 3px;
+	box-shadow: 0 0 10px rgba(0,0,0,.3);
+	margin: 0 auto 0 auto;
+	margin-top: 50px;
+}
+
+.wordcloud-container text {
+	cursor: pointer;
+}
+
+.wordcloud-container text:hover {
+	opacity: .7 !important;
+}
